package com.studylock.model;
public enum AttendanceStatus { PRESENT, ABSENT, LATE }
