package com.studylock.model;

public enum EnrollmentRequestReason {
    FUTURE_SEMESTER,
    CREDIT_LIMIT_EXCEEDED
}
