package com.studylock.model;

public enum EnrollmentRequestStatus {
    PENDING, APPROVED, REJECTED
}
