package com.studylock.model;

public enum SessionStatus {
    ACTIVE, COMPLETED, FAILED
}
