package com.studylock.model;

public enum SubmissionStatus {
    SUBMITTED, LATE, GRADED
}
