package com.studylock.model;

public enum UserRole {
    STUDENT, LECTURER, ADMIN
}
